[package]
name = "prox-report"
description = "A support and compliance tool for Proxmox nodes & clusters to gain credativ GmbH support."
authors = ["Florian Paul Azim Hoberg (@gyptazy) <florian.hoberg@credativ.de>"]
homepage = "https://github.com/credativ/prox-report/"
version = "1.0.0"
edition = "2021"
license = "GPL-3.0-or-later"

[dependencies]
anyhow = "1"
chrono = "0.4"
clap = { version = "4", features = ["derive", "env"] }
env_logger = "0.11"
glob = "0.3"
reqwest = { version = "0.11", default-features = false, features = ["blocking", "json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
log = "0.4"